--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+beautifulsoup4>=4.9.1
+bs4>=0.0.1
+
 django-cms>=3.8,<3.9
 djangocms-admin-style>=2.0,<3.0
 django-treebeard>=4.0,<5.0
-
+dj-database-url
 djangocms-text-ckeditor>=4.0,<5.0
 djangocms-link>=3.0,<4.0
 djangocms-icon>=2.0,<3.0
@@ -18,6 +21,11 @@ django-classy-tags>=2.0
 django-sekizai>=2.0
 django-mptt>0.9
 html5lib>=1.0.1
+matplotlib>=3.0.0
+numpy>=1.5.0
+pandas>=1.2.3
 Pillow>=3.0
+pip==21.0.1
+snscrape==0.3.4
 six
 pytz
